fix spacing

--- a/my-personal-website/src/componets/intro/Intro.css
+++ b/my-personal-website/src/componets/intro/Intro.css
@@ -41,6 +41,7 @@
   margin-top: 3%;
   display: flex;
   flex-direction: row;
+  gap: 16px;
 }
 .cvButton {
   width: 156px;
